fixed weird border issue, also redid fading with the help of stackoverflow

--- a/css/style2.css
+++ b/css/style2.css
@@ -60,7 +60,7 @@ h2 {
 
 .navbar.navbar-default {
     background: #FFFFFF;
-    border-color: #FFFFFF;
+    border: 0;
     top: 0;
     z-index: 10;
     display: block;
